# typerpad

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notes_typer/: cli.py
typerpad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
